section 3 media quary gap. bug fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -85,8 +85,14 @@ p{
 .right-side a:hover{
   border-bottom: 1px solid black;
   color: black;
-  transition: color 1s;
+  transition: 1s;
 }
+
+/* .right-side a:active{
+  color: red;
+  border-bottom: 1px solid black;
+} */
+
 
 .logo{
   height: 50px;
@@ -194,9 +200,12 @@ p{
   padding: 8px 0;
 }
 
-.sec2-sm-area-content a{
-  color: var(--light-blue)
-}
+/* .sec2-sm-area-content a:visited {
+  color: red
+} */
+
+
+
 
 /* section 3 */
 .section3-wrapper{
@@ -221,6 +230,16 @@ p{
   width: 100%;
   height: auto;
 }
+
+.section3-item-text-wrapper{
+  padding: 16px 0 24px 16px;
+  background-color: white;
+}
+
+.eight-pixel{
+  padding: 8px 0;
+}
+
 
 /* section 4 */
 .section4-wrapper {
@@ -415,20 +434,35 @@ p{
   /* section 3 */
   .section3-wrapper{
     background-color: white;
+    padding: 32px 16px;
   }
+
+  .section3-wrapper > h2{
+    padding-bottom: 16px;
+  }
+
   .section3-item-wrapper img, p{
     display: none;
   }
 
   .section3-items-wrapper{
     grid-template-columns: 1fr;
-    grid-column-gap: 8px;
+    grid-row-gap: 8px;
+    /* grid-column-gap: 8px; */
   }
 
   .section3-item-wrapper h3{
     background-color: var(--light-grey);
-    padding: 16px 0 24px 16px;
+    /* padding: 16px 0 24px 16px; */
     font-size: 1.8rem;
+  }
+
+  .section3-item-text-wrapper{
+    padding: 0;
+  }
+
+  .section3-item-text-wrapper > h3 {
+    padding: 16px 0 24px 16px ;
   }
 
   /* section 4 */
@@ -482,31 +516,10 @@ p{
     color: var(--font-very-dark-grey);
   }
 
-
-
-
-
-
-
-
   .footer > hr{
     display: none;
   }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-  
 }
 
 
